ThumbNavigation: fix truncated notification counter

--- a/app/styles/navigation.scss
+++ b/app/styles/navigation.scss
@@ -96,7 +96,8 @@
     }
 
     .icon-with-counter__counter {
-      right: -8px;
+      right: -7px;
+      top: -5px;
     }
   }
 
